[gd_scene load_steps=5 format=2]

[ext_resource path="res://GameOverScreen.gd" type="Script" id=1]
[ext_resource path="res://hud/HudTheme.theme" type="Theme" id=2]
[ext_resource path="res://hud/HudHeart.tres" type="Texture" id=3]
[ext_resource path="res://StatScreen.tscn" type="PackedScene" id=4]

[node name="MarginContainer" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 3.0
margin_top = 3.0
margin_right = -3.0
margin_bottom = -3.0
script = ExtResource( 1 )

[node name="GameOverScreen" type="VBoxContainer" parent="."]
margin_right = 506.0
margin_bottom = 442.0

[node name="VBoxContainer2" type="VBoxContainer" parent="GameOverScreen"]
margin_right = 506.0
margin_bottom = 76.0

[node name="StatScreen" parent="GameOverScreen/VBoxContainer2" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 0.0
margin_right = 506.0
margin_bottom = 76.0

[node name="Spacer" type="Label" parent="GameOverScreen"]
margin_top = 80.0
margin_right = 506.0
margin_bottom = 111.0
text = "
"

[node name="CenterContainer" type="CenterContainer" parent="GameOverScreen"]
margin_top = 115.0
margin_right = 506.0
margin_bottom = 165.0

[node name="VBoxContainer" type="VBoxContainer" parent="GameOverScreen/CenterContainer"]
margin_left = 168.0
margin_right = 338.0
margin_bottom = 50.0
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="GameOverScreen/CenterContainer/VBoxContainer"]
margin_right = 170.0
margin_bottom = 16.0

[node name="ContinueSelector" type="TextureRect" parent="GameOverScreen/CenterContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_right = 16.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )
texture = ExtResource( 3 )
stretch_mode = 1

[node name="Label" type="Label" parent="GameOverScreen/CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 20.0
margin_right = 155.0
margin_bottom = 15.0
theme = ExtResource( 2 )
text = " CONTINUE"

[node name="Spacer" type="Control" parent="GameOverScreen/CenterContainer/VBoxContainer"]
margin_top = 20.0
margin_right = 170.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 10 )

[node name="HBoxContainer2" type="HBoxContainer" parent="GameOverScreen/CenterContainer/VBoxContainer"]
margin_top = 34.0
margin_right = 170.0
margin_bottom = 50.0

[node name="GameOverSelector" type="TextureRect" parent="GameOverScreen/CenterContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
margin_right = 16.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )
texture = ExtResource( 3 )
stretch_mode = 1

[node name="Label" type="Label" parent="GameOverScreen/CenterContainer/VBoxContainer/HBoxContainer2"]
margin_left = 20.0
margin_right = 170.0
margin_bottom = 15.0
theme = ExtResource( 2 )
text = " GAME OVER"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
bus = "Sounds"

[node name="Timer" type="Timer" parent="."]
wait_time = 0.06
one_shot = true

[node name="ExitTimer" type="Timer" parent="."]
wait_time = 1.4
one_shot = true
